# Arkenaline

./: .gitignore  CMakeLists.txt  adrenaline_compat.h  adrenaline_version.h  make  readme.md
bubble/: CMakeLists.txt  utils.c  utils.h
cef/: Makefile
cef/binary/: main.c
cef/include/: common.h  libpsardumper.h  psperror.h  pspinit.h  systemctrl.h  systemctrl_se.h  vita_pops.h  vshctrl.h
cef/inferno/: Makefile  iodrv_funcs.c  isocache.c  isoread.c  main.c  umd.c
cef/payloadex/: Makefile  libc.h  main.c
cef/popcorn/: main.c
cef/rebootex/: Makefile  libc.c  main.c
cef/recovery/: Makefile  files.h  installer.c  main.c  main.h  menu.c  menu.h  options.h  plugins.c  utils.c  utils.h
cef/satelite/: blit.c  blit.h  main.c  menu.c  menu.h
cef/systemctrl/: LflashFatfmt.c  adrenaline.c  adrenaline.h  conf.c  executable_patch.c  executable_patch.h  imports.S  init_patch.c  init_patch.h  io_patch.c  io_patch.h  kubridge.c  libraries_patch.c  libraries_patch.h  main.c  main.h  malloc.c  nid_map.txt  nid_table.h  nodrm.c  nodrm.h  power_patch.c  power_patch.h  string_clone.c  string_clone.h  sysmodpatches.c  sysmodpatches.h  systemctrl.c  utility_patch.c  utility_patch.h
cef/updater/: Makefile  main.c  psp-updatelist.template  version.c
cef/vshctrl/: main.c  virtualpbpmgr.c  virtualpbpmgr.h  vshmenu.h
kernel/: CMakeLists.txt  exports.yml  main.c  utils.c  utils.h
user/: CMakeLists.txt  files.h  flashfs.c  main.c  menu.c  msfs.c  pops.c  startdat.h  states.c  titleinfo.c  usb.c  utils.c  utils.h
vsh/: CMakeLists.txt  main.c  utils.c  utils.h
(+17 files in other folders)
